@@ -1,5 +1,11 @@
 2009-04-08  Badlop  <badlop@process-one.net>
 
+	* src/mod_muc/mod_muc.erl: English fixes (thanks to Glenn Sieb)
+	* src/mod_muc/mod_muc_log.erl: Likewise
+	* src/mod_muc/mod_muc_room.erl: Likewise
+	* src/mod_register.erl: Likewise
+	* src/web/ejabberd_web_admin.erl: Likewise
+
 	* src/mod_pubsub/mod_pubsub.erl: Quickfix compilation errors.
 
 	* src/mod_irc/mod_irc_connection.erl: Fix compilation warnings.
